Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-37594

Thread hang on TRUNCATE GTT after server_id change

    XMLWordPrintable

Details

    • Not for Release Notes
    • Q4/2025 Server Maintenance

    Description

      SET GLOBAL server_id=100;
      CREATE GLOBAL TEMPORARY TABLE t ON COMMIT PRESERVE ROWS AS VALUES (5),(6),(7);
      SET GLOBAL server_id=1;
      TRUNCATE t;
      

      Leads to hang:

      MDEV-35915-2 CS 12.0.1 5d52514d536e9d141963f956408ac0efb4958a74 (Optimized, Clang 21.1.0-20250811) Build 06/09/2025

      12.0.1-opt>SHOW PROCESSLIST;
      +----+------+-----------+------+---------+------+----------------------+------------------+----------+
      | Id | User | Host      | db   | Command | Time | State                | Info             | Progress |
      +----+------+-----------+------+---------+------+----------------------+------------------+----------+
      |  4 | root | localhost | test | Query   |   77 | checking permissions | TRUNCATE t       |    0.000 |
      |  5 | root | localhost | test | Query   |    0 | starting             | SHOW PROCESSLIST |    0.000 |
      +----+------+-----------+------+---------+------+----------------------+------------------+----------+
      2 rows in set (0.000 sec)
      

      Attachments

        Issue Links

          Activity

            People

              nikitamalyavin Nikita Malyavin
              Roel Roel Van de Paar
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 4h 55m
                  1d 4h 55m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.