Remove parent table reference from Global temporary tables

A reference to parent table causes connection hangs in some situations.
While these situations usually signify some problem behind, it's not a
convenient behavior for users, even in case of bugs.

The only place where the parent share was accessed is checking the table
version match in TABLE_LIST::is_the_same_definition. Instead of
substituting the table to check, assign a parent tabledef_version on a
child table creation in open_global_temporary_table.

Also fixes MDEV-37594, MDEV-37656.

This commit should be squashed with a base feature commit after review.